force-app/main/default/objects/Results__c/Results__c.object-meta.xml
<CustomObject>
    <label>Results</label>
    <nameField>
        <label>Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>