force-app/main/default/objects/Results__c/fields/General_Science_Marks__c.field-meta.xml
<CustomField>
    <fullName>General_Science_Marks__c</fullName>
    <label>General Science Marks</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>