force-app/main/default/objects/Results__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Second Class</fullName>
            </value>
            <value>
                <fullName>First Class</fullName>
            </value>
            <value>
                <fullName>First Class with Distinction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>