force-app/main/default/objects/Results__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <formula>English_Marks__c  +  Maths_Marks__c  +  General_Science_Marks__c  +  General_Studies_Marks__c  +  Computer_Marks__c  +  Drawing_Marks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>