force-app/main/default/objects/Results__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Total_Marks__c</columns>
    <columns>Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>